# EigenVector

./: CMakeLists.txt  conanfile.txt
C++/PowerMethod/: CMakeLists.txt  GWevIntra_new.cpp  thdMul.cpp  theBestEigen.cpp
